Implemented personalized notification